# speech-vad-demo

./: CMakeLists.txt
src/: file_cut.c  file_cut.h  vad_main.c
